manifests/watchtower/appflowy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: appflowy-cloud
  namespace: docs
  labels:
    app.kubernetes.io/name: appflowy-cloud
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: appflowy-cloud
  ports:
    - name: http
      port: 8000
      targetPort: http
